# test_work_picasso

./: .env  Dockerfile  docker-compose.yml  pyproject.toml
bicycle_rental/: apps.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
bicycle_rental/migrations/: 0001_initial.py  0002_alter_bicycle_options_alter_rental_options_and_more.py
config/: settings.py  urls.py
tests/: test_integration.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/management/commands/: add_bike.py  csu.py
users/migrations/: 0001_initial.py
